src/styles/modules/_listElement.scss
$li-height: 60px;
$estimition-height: 40px;

.listElement {
  display: grid;
  align-items: center;
  justify-content: center;
  grid-template-rows: 1fr;
  grid-template-columns: $workspace_column_marking;
  width: 100%;
  height: $li-height;
  background-color: rgb(230, 228, 228);
  border-radius: 5px;
  margin: 5px 0;
  list-style: none;
  box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);

  p {
    grid-row: 1;
  }

  //for client page
  .avatar {
    display: flex;
    justify-content: center;
    align-items: center;

    grid-row: 1;
    width: 52px;
    height: $li-height - 10px;

    img {
      width: 100%;
      height: 100%;
      border-radius: 60px;
    }
  }

  //for project page
  .preview {
    display: flex;
    justify-content: center;
    align-items: center;

    grid-row: 1;
    width: 75px;
    height: $li-height - 10px;

    img {
      width: 100%;
      height: 100%;
      border-radius: 2px;
    }
  }

  .checkbox {
    margin-left: 8%;
    grid-column: 1;

    div {
      grid-row: 1;
    }
  }

  .avatar {
    grid-column: 2;
  }

  .preview {
    grid-column: 2;
  }

  .name {
    grid-column: 3;
  }

  .id {
    grid-column: 4;
  }

  .created_ad {
    grid-column: 5;
  }

  .email {
    grid-column: 6;
  }

  .country {
    grid-column: 7;
  }
}
.userListElement {
  display: grid;
  align-items: center;
  justify-content: center;
  grid-template-rows: 1fr;
  grid-template-columns: $workspace_column_marking-user;
  width: 100%;
  height: $li-height;
  background-color: rgb(230, 228, 228);
  border-radius: 5px;
  margin: 5px 0;
  list-style: none;
  box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);

  p {
    grid-row: 1;
  }

  //for client page
  .avatar {
    display: flex;
    justify-content: center;
    align-items: center;

    grid-row: 1;
    width: 52px;
    height: $li-height - 10px;

    img {
      width: 100%;
      height: 100%;
      border-radius: 60px;
    }
  }

  //for project page
  .preview {
    display: flex;
    justify-content: center;
    align-items: center;

    grid-row: 1;
    width: 75px;
    height: $li-height - 10px;

    img {
      width: 100%;
      height: 100%;
      border-radius: 2px;
    }
  }


  .email {
    grid-column: 1;
    margin-left: 30px;
  }

  .preview {
    grid-column: 2;
  }

  .firstName {
    grid-column: 6;
  }
  .lastname {
    grid-column: 7;
  }
  .phone {
    grid-column: 5;
  }

  .id {
    grid-column: 2;
  }

  .created_ad {
    grid-column: 3;
  }



  .bio {
    grid-column: 4;
  }
}

.active {
  color: rgb(0, 174, 190) !important;
}

.estimate-box {
  padding: 15px 20px;
  border-radius: 15px;
  background-color: rgb(231, 231, 231);
  box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);
  margin-bottom: 30px;
}

.top-info {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;

  padding: 0 10px;
  margin-bottom: 15px;
}
.bottom-info {
  width: 100%;
  display: flex;
  justify-content: end;
  padding: 0 15px;
  margin-top: 20px;
}
.top-info__left {
  display: flex;
  gap: 30px;
}

.EstimateElement {
  display: grid;
  align-items: center;
  justify-items: center;
  grid-template-rows: 1fr;
  grid-template-columns: $estimates_column_marking;
  width: 100%;
  min-height: $estimition-height;
  background-color: rgb(231, 231, 231);
  border-radius: 5px;
  margin: 5px 0;
  list-style: none;
  box-shadow: 0 0 2px rgba(126, 126, 126, 0.5);

  p {
    grid-row: 1;
  }

  //for client page
  .avatar {
    display: flex;
    justify-content: center;
    align-items: center;

    grid-row: 1;
    width: 52px;
    height: $li-height - 20px;

    img {
      width: 100%;
      height: 100%;
      border-radius: 60px;
    }
  }

  //for project page
  .preview {
    display: flex;
    justify-content: center;
    align-items: center;

    grid-row: 1;
    width: 75px;
    height: $li-height - 10px;

    img {
      width: 100%;
      height: 100%;
      border-radius: 2px;
    }
  }

  .checkbox {
    margin-left: 8%;
    grid-column: 1;

    div {
      grid-row: 1;
    }
  }
  

  .name {
    grid-column: 2;
  }



  .id {
    grid-column: 3;
  }

  .created_ad {
    grid-column: 4;
  }

  .cost {
    grid-column: 6;
  }

  .email {
    grid-column: 5;
  }

  .country {
    grid-column: 7;
  }
}

